# LETI

Semester 1/: Coursework.cpp  LAB1.cpp  LAB2.cpp  LAB3.cpp  LAB4.cpp  LAB5.cpp
Semester 2/: Coursework.cpp  LAB1.cpp  LAB2.cpp  LAB3.cpp  КЧ дерево.docx
Semester 3/: ПР_ООП_осень_2024.docx
Semester 3/Alg&DataStruct/LAB1/: CMakeLists.txt  DoubleLinkedList.cpp  DoubleLinkedList.h  DynamicArray.cpp  DynamicArray.h  ReversePolishNotation.cpp  Stack.h
Semester 3/Alg&DataStruct/LAB2/: Array.cpp
Semester 3/Alg&DataStruct/LAB3/: BaseTree.h  Menu.cpp  RBTree.cpp  StringParser.cpp  main.cpp
Semester 3/Coursework/: Kyrsach.cpp  input.txt
Semester 3/LAB1/: ReversePolishNotation.h  Stack.cpp  main.cpp
Semester 3/LAB2/: Array.h  CMakeLists.txt  Menu.cpp  Menu.h  TimSort.cpp  TimSort.h  main.cpp
Semester 3/LAB3/: BaseTree.cpp  CMakeLists.txt  Menu.h  RBTree.h  StringParser.h
Semester 3/OOPLabs/Coursework/: MainLab.pro  ball.cpp  ball.h  interface.cpp  interface.h  mainwindow.cpp  mainwindow.h
Semester 3/OOPLabs/LAB1/: CMakeLists.txt  application.cpp  application.h  array.cpp  array.h  number.h
Semester 3/OOPLabs/LAB2/: CMakeLists.txt  application.cpp  application.h  array.cpp  array.h  number.h
Semester 3/OOPLabs/LAB3/: CMakeLists.txt  TComplex.cpp  TComplex.h  application.cpp  application.h  array.cpp  array.h  main.cpp  main.sln  number.h  polynom.cpp  polynom.h
Semester 3/OOPLabs/LAB4/: array.h  interface.cpp  interface.h  main.cpp  number.h  prog3.pro
Semester 3/OOPLabs/LAB8/: Functions.pro  TFSi.h  TFSin.h  TFunction.h  array.h  mainwindow.cpp  polynom.h  (+1 more)
(+39 files in other folders)
